Add score computation code and datasets#

--- a/github_test.ipynb
+++ b/github_test.ipynb
@@ -43,7 +43,8 @@
    ],
    "source": [
     "print(\"Aruni Chenxi (ac2552), \")\n",
-    "print(\"Yinghui Bimali (yb272), \")"
+    "print(\"Yinghui Bimali (yb272), \")\n",
+    "print(\"Carly Jiang (cjj43)\")"
    ]
   },
   {
